# cards

./: .gitignore  CARD_DESIGN.md  CLAUDE.md  CMakeLists.txt  README.md  package.ps1
.claude/: settings.local.json
assets/decks/enemy/: bacteria.json  fungus.json
assets/decks/noah/: noah_cards.json
assets/decks/player/: cards.json  deck_config.json
assets/enemies/: bacteria.json  fungus.json
assets/enemies/inflamed_nerve/: metadata.json
assets/maps/: nodes.json
assets/maps/leg/: leg.json
assets/player/: player.json
assets/shaders/: ambulance.fs  card_perspective.gdshader  dissolve.fs  heartbeat.fs  hit.fs  intent_float.vs  transition.fs
src/: main.cpp
src/app/: AppSettings.cpp  AppSettings.h
src/audio/: CardAudio.cpp  CardAudio.h
src/config/: Defines.h
src/content/: EnemyCatalog.cpp  EnemyCatalog.h  EnemyFactory.cpp  EnemyFactory.h  EnemySpriteConfig.h  MapData.cpp  MapData.h
src/core/: Card.cpp  Card.h  CardDatabase.cpp  CardDatabase.h  DamageResult.h  Deck.cpp  Deck.h  Enemy.cpp  Enemy.h  GameState.cpp  GameState.h  Player.cpp  Player.h
src/dev/: DevConsole.cpp  DevConsole.h
src/gameplay/: CardEffect.cpp  CardEffect.h  CombatResolver.cpp  CombatResolver.h  MapRunState.cpp  MapRunState.h  NoahEventState.h  RewardState.h  StatusCollection.cpp  StatusCollection.h
src/ui/: CardArtCache.cpp  CardArtCache.h  CardFaceCache.cpp  CardFaceCache.h  CardRenderer.cpp  CardRenderer.h  Colors.h  DissolveEffect.cpp  DissolveEffect.h  EnemySprite.cpp  EnemySprite.h  FontUtils.cpp  FontUtils.h  GameScreen.cpp  GameScreen.h  HitEffect.cpp  HitEffect.h  InputHandler.cpp  InputHandler.h  PlayerSprite.cpp  PlayerSprite.h  ScreenOverlayEffect.cpp  ScreenOverlayEffect.h  ScreenTransition.cpp  ScreenTransition.h  UIState.cpp  UIState.h
src/ui/screens/: GameScreenMenus.cpp  GameScreenOverlays.cpp
tests/: core_tests.cpp
